--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,11 @@
         </activity>
         <activity
             android:name=".toptracks.TopTracksActivity"
-            android:label="@string/title_activity_top_tracks">
-
+            android:label="@string/title_activity_top_tracks" >
+        </activity>
+        <activity
+            android:name=".trackplay.TrackPlayActivity"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
