--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
             android:name=".trackplay.TrackPlayActivity"
             android:label="@string/app_name" >
         </activity>
+
+        <service
+            android:enabled="true"
+            android:name=".trackplay.MusicPlayService" >
+        </service>
     </application>
 
 </manifest>
